redis集成，mybatis存在问题

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,7 @@
-jdbc.host=127.0.0.1
-jdbc.database=user
+jdbc.host=localhost
+jdbc.database=test
 jdbc.port=3306
-jdbc.username=root
-jdbc.password=root
+jdbc.username=my_batis
+jdbc.password=123456
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/test
