--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.host=localhost
 jdbc.database=test
 jdbc.port=3306
-jdbc.username=my_batis
-jdbc.password=123456
+jdbc.username=sa
+jdbc.password=wangbin
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/test
